--- a/yes.html
+++ b/yes.html
@@ -12,9 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <div>
-        <h1 id="header" class="hyes">УРААААА!!! 💕</h1>
-      </div>
+      <h1 class="hyes">УРААААА!!! 💕</h1>
       <img src="./assets/animation.gif" alt="cat" />
     </div>
   </body>
